<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3772E7"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_panel" />

    </FrameLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iconPadding"
        android:layout_marginTop="@dimen/button_marginTop"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/line_spacing"
        app:iconTint="@color/text"
        app:cornerRadius="@dimen/cornerRadius"/>
    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iconPadding"
        android:layout_marginTop="@dimen/button_marginTop"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/line_spacing"
        app:iconTint="@color/text"
        app:cornerRadius="@dimen/cornerRadius"/>
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iconPadding"
        android:layout_marginTop="@dimen/button_marginTop"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/line_spacing"
        app:iconTint="@color/text"
        app:cornerRadius="@dimen/cornerRadius"/>
</LinearLayout>