<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">


        <Button
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/text">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="start"

            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text" />

    </FrameLayout>

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height"
    android:layout_marginTop="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_marginTop"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_gravity="center_vertical"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/text_settings_2" />

    <Switch
        android:id="@+id/theme_switch"
        android:layout_width="56dp"
        android:layout_height="40dp"
       android:layout_gravity="end"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">

    </Switch>

</FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_marginTop"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_gravity="center_vertical"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/text_settings_2" />

        <Button
            android:layout_width="@dimen/layout"
            android:layout_height="@dimen/layout"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            app:icon="@drawable/share"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/text"
            >
        </Button>
</FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_marginTop"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_gravity="center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_settings_2" />

        <Button
            android:layout_width="@dimen/layout"
            android:layout_height="@dimen/layout"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            app:icon="@drawable/support"
            app:iconGravity="textEnd"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/text"
            >
        </Button>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_marginTop"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:layout_gravity="center_vertical"
            android:text="@string/User_Agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_settings_2" />

        <Button
            android:layout_width="@dimen/layout"
            android:layout_height="@dimen/layout"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            app:icon="@drawable/right_arrow"
            app:iconGravity="textEnd"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/text"
            >
        </Button>
    </FrameLayout>
</LinearLayout>